fixed mobile version wrap + padding

--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -31,11 +31,11 @@
         text-align: left;
 
         @include respond(tab-port) {
-          font-size: 1.5rem;
+          font-size: 1.4rem;
           text-align: center;
         }
         @include respond(phone) {
-          font-size: 1.6rem;
+          font-size: 1.4rem;
           text-align: center;
         }
 
