--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -9,7 +9,6 @@
   font-weight: 400;
   color: $text-colour;
   margin-bottom: 0;
-  position: relative;
   top: 0;
   left: 0;
   bottom: 0;
@@ -21,26 +20,28 @@
   }
 
   .hero-h1 {
-    font-size: 1.5rem;
+    font-size: 1.5em;
     font-weight: 400;
     //margin-bottom: 3.2rem;
     text-align: left;
     padding-top: 0.5em;
-    padding-right: 10em;
+    // padding-right: 10em;
 
     @include respond(tab-land) {
-      font-size: 4rem;
+      font-size: 2rem;
     }
     @include respond(tab-port) {
-      font-size: 3.6rem;
+      font-size: 2rem;
       text-align: center;
+      align-items: center;
     }
     @include respond(phone) {
-      font-size: 3.5rem;
-      line-height: 1.5;
+      font-size: 2rem;
+      text-align: center;
+      align-items: center;
     }
     @include respond(phone-xs) {
-      font-size: 2.8rem;
+      font-size: 1.5rem;
     }
   }
 
@@ -50,7 +51,7 @@
     //margin-bottom: 3.2rem;
     text-align: left;
     padding-top: 2em;
-    padding-right: 10em;
+    // padding-right: 10em;
     color: $primary-color;
 
     @include respond(tab-land) {
